# Formaci-n-python

./: README.md  electronica_smart.db
electronica_smart/: electronica_smart.db  pyproject.toml  variables_de_entorno.env
electronica_smart/app/: main.py
electronica_smart/app/api/: smart_devices.py
electronica_smart/app/controladores/: auth.py  device_event_logs.py  simulation_controller.py  smart_devices.py
electronica_smart/app/core/: config.py  dependencies.py  security.py
electronica_smart/app/db/: base.py  init_db.py  session.py
electronica_smart/app/models/: device_event_log.py  smart_device.py  user.py
electronica_smart/app/repositories/: device_event_log_repository.py  smart_device_repository.py  user_repository.py
electronica_smart/app/schemas/: auth.py  device_event_log.py  simulation.py  smart_device.py
electronica_smart/app/scripts/: populate_db.py
electronica_smart/app/services/: device_event_log_service.py  simulation_service.py  smart_device_service.py  user_service.py
electronica_smart/app/simulator/: base.py  temperature.py
electronica_smart/frontend/: index.html  package-lock.json  package.json  vite.config.js
electronica_smart/frontend/src/: App.jsx  api.js  index.css
